# enum-derived

./: .gitignore  Cargo.toml  README.md  crates-io.md  test.rs
.github/workflows/: build.yml  publish.yml  rust.yml
enum-derived/: CHANGELOG.md  Cargo.toml  README.md  crates-io.md
enum-derived-macro/: Cargo.toml  LICENSE
enum-derived-macro/src/: lib.rs  rand.rs
enum-derived-test-crate/: Cargo.toml
enum-derived-test-crate/src/: lib.rs
enum-derived/examples/: 09-tuple-enum-with-random-values.rs  build.rs  rand-dna.rs  rand-recursive.rs
enum-derived/src/: lib.rs
enum-derived/tests/: rand-progress.rs
enum-derived/tests/rand/: 04-hygiene.rs  05-fail-for-struct.stderr  05-works-for-struct-with-named-fields.rs  07-fail-for-tuple-enum.rs  07-fail-for-tuple-enum.stderr  07-string-vec-in-tuple-enum.rs  08-fail-for-struct-enum.rs  08-fail-for-struct-enum.stderr  08-string-in-struct-enum.rs  09-tuple-enum-with-random-values.rs  10-struct-enum-success.rs  11-custom-rand-function.rs  12-custom-weights.rs  13-recursive-rand.rs  14-rand-trait-not-imported.rs  14-rand-trait-not-imported.stderr  15-struct-in-enum.rs  16-works-for-struct-with-named-fields.rs  17-works-for-struct-with-unnamed-fields.rs  18-works-for-unit-structs.rs  19-custom-rand-for-struct-with-named-fields.rs  20-custom-rand-for-struct-with-unnamed-fields.rs  21-custom-rand-for-enum-with-named-fields-field-level.rs  22-custom-rand-struct-with-string.rs
examples/: 09-tuple-enum-with-random-values.rs  rand-dna.rs
src/: lib.rs  rand.rs
tests/: rand-progress.rs
tests/rand/: 01-builds.rs  02-rand_function_exists.rs  03-returns_every_variant.rs  05-fail-for-struct.rs  05-fail-for-struct.stderr  06-fail-for-empty-enum.rs  06-fail-for-empty-enum.stderr  07-fail-for-tuple-enum.rs  07-fail-for-tuple-enum.stderr  08-fail-for-struct-enum.stderr  09-tuple-enum-with-random-values.rs  11-custom-rand-function.rs  12-custom-weights.rs  12-multiple-custom-rand-funcs.rs
