[package]
name = "enum-derived"
description = "Derive new functionality for enums"
version = "0.2.0"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[[tests]]
name = "tests"
path = "tests/rand-progress.rs"


[dependencies]
rand = "0.8.5"
syn = { version = "1.0.107", features = ["derive"] }
quote = "1.0.23"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }
