[package]
name = "enum-derived"
description = "Add new functionality to unit-like enums"
version = "0.4.0"
license = "MIT"
edition = "2021"
repository = "https://github.com/green-spaces/enum-derived"
documentation = "https://docs.rs/enum-derived"
keywords = ["enum", "random", "macro", "testing"]
readme = "crates-io.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[[tests]]
name = "tests"
path = "tests/rand-progress.rs"


[dependencies]
rand = "0.8.5"
syn = { version = "1.0.107", features = ["derive"] }
quote = "1.0.23"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }
