[package]
name = "enum-derived"
description = "Easily generate random variants of your enums"
version = "0.6.0"
license = "MIT"
edition = "2021"
repository = "https://github.com/green-spaces/enum-derived"
documentation = "https://docs.rs/enum-derived"
keywords = ["enum", "random", "macro", "testing"]
readme = "crates-io.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[[tests]]
name = "tests"
path = "tests/rand-progress.rs"


[dependencies]
rand = "0.8.5"
syn = { version = "1.0.107", features = ["derive", "extra-traits"] }
quote = "1.0.23"
proc-macro2 = "1.0.51"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }
