[package]
name = "enum-derived-macro"
version = "0.1.0"
license = "MIT"
edition = "2021"
repository = "https://github.com/green-spaces/enum-derived"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.107", features = ["derive"] }
quote = "1.0.23"
proc-macro2 = "1.0.51"
