[package]
name = "enum-derived"
description = "Easily generate random variants of your enums"
version = "0.8.1"
license = "MIT"
edition = "2021"
repository = "https://github.com/green-spaces/enum-derived"
documentation = "https://docs.rs/enum-derived"
keywords = ["enum", "random", "rand", "derive", "struct"]
readme = "crates-io.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[tests]]
name = "tests"
path = "tests/rand-progress.rs"

[dependencies]
rand = "0.8.5"
enum-derived-macro = "0.2.0"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }
