[package]
name = "enum-derived"
description = "Generate random instances of your enums and structs"
version = "0.9.2"
license = "MIT"
edition = "2021"
repository = "https://github.com/green-spaces/enum-derived"
documentation = "https://docs.rs/enum-derived"
keywords = ["enum", "random", "rand", "derive", "struct"]
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[tests]]
name = "tests"
path = "tests/rand-progress.rs"

[dependencies]
rand = "0.8.5"
enum-derived-macro = {version = "0.3.0", path = "../enum-derived-macro" }

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }
